[package]
name = "gamepiler"
version = "0.1.0"
description = "A gamifier for the rust compilator. Get rewards and achievements for making errors!"
homepage = "https://github.com/Dajamante/gamepiler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
cargo_metadata = "0.14.1"
env_logger = "0.9.0"
log = "0.4.14"
serde_json = "1.0.72"
